--- a/app/src/main/res/layout/fragment_cost.xml
+++ b/app/src/main/res/layout/fragment_cost.xml
@@ -79,7 +79,7 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/label_weight"
+                app:layout_constraintTop_toBottomOf="@+id/progress_cost"
                 tools:listitem="@layout/adapter_cost" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
